feat: api docs for booking
